fixed staff alignment, mobile nav

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -40,7 +40,7 @@ body {
     width: auto;
   }
 
-  #mobile-nav {
+  .mobile_nav {
     display: none;
   }
 }
